# ssr-sandbox

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.amazonlinux  README.md  build-ssr.sh  build.rs
.cargo/: config.toml
.github/workflows/: release.yml
example-src/: README.md  entry.js
example-src/components/: footer.js  header.js
example-src/pages/: about.js  apis.js  contact.js  home.js  tamper.js
examples/: README.md  python_client.py
src/: bootstrap.js  fetch.rs  lib.rs  loader.rs  main.rs  ops.rs  runtime.rs  sanitize.rs
