[package]
name = "ssr-sandbox"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
description = "Sandboxed SSR runtime using deno_core - no fs/net/env access"

[dependencies]
# Core runtime - pinned to patch version (0.x is unstable)
deno_core = "~0.311"

# Async runtime
tokio = { version = "~1.48", features = ["full"] }

# Utilities - minor version locked
anyhow = "~1.0"
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"

# Crypto APIs
uuid = { version = "~1.11", features = ["v4"] }
rand = "~0.8"
sha2 = "~0.10"
base64 = "~0.22"

# Fetch API
reqwest = { version = "~0.12", default-features = false, features = ["json", "rustls-tls"] }
url = "~2.5"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"  # Optimize for size
