[package]
name = "ssr-sandbox"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
description = "Sandboxed SSR runtime using deno_core - no fs/net/env access"

[dependencies]
# Core runtime - pinned to patch version (0.x is unstable)
# Versions from Deno 2.0.0 release for compatibility
deno_core = "~0.311"
deno_webidl = "~0.171"
deno_web = "~0.202"
deno_console = "~0.171"
deno_url = "~0.171"
deno_crypto = "~0.185"
deno_permissions = "~0.31"

# Async runtime - version pinned for deno_web compatibility
tokio = { version = "1.36", features = ["full"] }

# Utilities - minor version locked
anyhow = "~1.0"
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"

# Crypto ops (used in runtime.rs until migrated to deno_crypto)
uuid = { version = "~1.11", features = ["v4"] }
rand = "~0.8"
sha2 = "~0.10"
base64 = "~0.22"

# Fetch API
reqwest = { version = "~0.12", default-features = false, features = ["json", "rustls-tls"] }
url = "~2.5"

[build-dependencies]
# Same versions as main dependencies for snapshot creation
deno_core = "~0.311"
deno_webidl = "~0.171"
deno_web = "~0.202"
deno_console = "~0.171"
deno_url = "~0.171"
deno_crypto = "~0.185"
deno_permissions = "~0.31"
serde_json = "~1.0"
# Required for shared ops module
serde = { version = "~1.0", features = ["derive"] }
reqwest = { version = "~0.12", default-features = false, features = ["json", "rustls-tls"] }
url = "~2.5"
anyhow = "~1.0"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"  # Optimize for size
